# anki_web_fast_api

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  main.py  models.py  pyproject.toml
card_styles/: models.py  router.py  schemas.py
card_types/: models.py  router.py  schemas.py
cards/: models.py  router.py  schemas.py
data/: db.py
decks/: models.py  router.py  schemas.py
migrations/: env.py
migrations/versions/: 94fbc38843c5_.py  b752f9cac2ff_.py  c9f48644596f_.py
tests/: conftest.py  test_0_auth.py  test_1_decks.py  test_2_cards.py
users/: auth.py  models.py  router.py  schemas.py
